2011-10-12  Yury Semikhatsky  <yurys@chromium.org>

        [Chromium] Web Inspector: repair interactive tests for debugger pause
        https://bugs.webkit.org/show_bug.cgi?id=69912

        Listen to DebuggerModel event instead of overriding private methods on it.

        Reviewed by Pavel Feldman.

        * src/js/Tests.js:
        (.TestSuite.prototype._waitForScriptPause):

2011-10-11  Steve VanDeBogart  <vandebo@chromium.org>

        [chromium] Add accessor for plugin request to not scale print output.
        https://bugs.webkit.org/show_bug.cgi?id=68853

        Reviewed by Darin Fisher.

        * public/WebFrame.h:
        * public/WebPlugin.h:
        (WebKit::WebPlugin::isPrintScalingDisabled):
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::isPrintScalingDisabledForPlugin):
        * src/WebFrameImpl.h:
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::isPrintScalingDisabled):
        * src/WebPluginContainerImpl.h:

2011-10-11  Antoine Labour  <piman@chromium.org>

        Separate compositor client thread from webkit's main thread.
        https://bugs.webkit.org/show_bug.cgi?id=69048

        Reviewed by Darin Fisher.

        * WebKit.gyp:
        * public/WebKitPlatformSupport.h:
        (WebKit::WebKitPlatformSupport::currentThread):
        * src/CCMainThreadImpl.cpp: Added.
        (WTF::TaskWrapper::TaskWrapper):
        (WTF::TaskWrapper::~TaskWrapper):
        (WTF::TaskWrapper::run):
        (WebCore::CCMainThread::initialize):
        (WebCore::CCMainThread::postTask):

2011-10-11  Simon Fraser  <simon.fraser@apple.com>

        Make custom scrollbar theme for use in DRT, to reduce pixel diffs between platforms
        https://bugs.webkit.org/show_bug.cgi?id=68134

        Reviewed by Darin Adler.

        Use ScrollbarThemeMock when the setting to use mock scrollbars is enabled.
        
        Make ScrollbarTheme::nativeTheme() private, and add a new static theme() method